--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "firebase": "^11.0.2",
+    "imagekit": "^5.2.0",
+    "imagekitio-react": "^4.2.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
