--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
+    "express": "^4.21.1",
     "firebase": "^11.0.2",
+    "html2canvas": "^1.4.1",
     "imagekit": "^5.2.0",
     "imagekitio-react": "^4.2.0",
     "jspdf": "^2.5.2",
